--- a/python/Jupyter_Notebooks/Metadata_Processing.ipynb
+++ b/python/Jupyter_Notebooks/Metadata_Processing.ipynb
@@ -2,18 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "a56e2404",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "D:\\Archiv\\Studium\\Master\\6.-Semester\\Masters_Thesis\\Git\\acoustic_covid_detection\\python\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import pandas as pd\n",
@@ -36,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "e0760fb0",
    "metadata": {},
    "outputs": [],
@@ -1496,6 +1488,359 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "bb81706e-440c-42ba-96d5-3c28ab67e06c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2fc7ba09-78be-41cd-a0c2-a74818398cfc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c28e6c6a-a99b-40a1-8b41-87162e39a056",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30eb74db-dccd-458d-a5ed-001be75a8285",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eca58ed6-7864-4362-8a09-d1d53c055bcf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "b4c55665-dd52-4197-92a9-e7c5f244a55f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"data/Coswara_processed/full_meta_data.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "77d9ab73-4c3e-4d2d-afad-51ee67ff75f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df=df.iloc[:, :37]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "0318e2ce-942d-4ea0-ad10-ec5e89507348",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>gender</th>\n",
+       "      <th>age</th>\n",
+       "      <th>country</th>\n",
+       "      <th>loss_of_smell</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>male</td>\n",
+       "      <td>28</td>\n",
+       "      <td>India</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>male</td>\n",
+       "      <td>25</td>\n",
+       "      <td>India</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>female</td>\n",
+       "      <td>28</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   gender age        country loss_of_smell\n",
+       "0    male  28          India           NaN\n",
+       "1    male  25          India           NaN\n",
+       "2  female  28  United States           NaN"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "partial_df = df[[\"gender\", \"age\", \"country\", \"loss_of_smell\"]]\n",
+    "partial_df.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "fc9b93fe-2c5e-4ecd-b2e6-513eadd4521b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for col in partial_df.columns:\n",
+    "#     partial_df[col] = partial_df[col].astype(\"category\").cat.as_ordered()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "4ac388da-50c3-4f6c-ab76-49791926e5e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0               India\n",
+       "1               India\n",
+       "2       United States\n",
+       "3               India\n",
+       "4               India\n",
+       "            ...      \n",
+       "2741            India\n",
+       "2742            India\n",
+       "2743            India\n",
+       "2744            India\n",
+       "2745            India\n",
+       "Name: country, Length: 2746, dtype: category\n",
+       "Categories (52, object): ['Argentina' < 'Australia' < 'Bahrain' < 'Bangladesh' ... 'United Arab Emirates' < 'United Kingdom' < 'United States' < 'Vietnam']"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# for v in partial_df.columns: \n",
+    "# partial_df.loc[\"gender\"] = \n",
+    "partial_df[\"country\"].astype('category').cat.as_ordered()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "d4788a83-8735-4e07-9e11-c2155248d136",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cat_vars=partial_df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "id": "74f7d924-e45e-47cf-8426-7c52c9ac1892",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Michi\\AppData\\Local\\Temp\\ipykernel_4460\\3050328611.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  for v in cat_vars: partial_df[v] = partial_df[v].astype('category').cat.as_ordered()\n"
+     ]
+    }
+   ],
+   "source": [
+    "for v in cat_vars: partial_df[v] = partial_df[v].astype('category').cat.as_ordered()\n",
+    "cat_sz = [(c, len(partial_df[c].cat.categories)+1) for c in cat_vars]\n",
+    "emb_szs = [(c, min(50, (c+1)//2)) for _,c in cat_sz]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "b55afa64-b980-4baa-9d8a-1cee954eec2f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([('gender', 4), ('age', 83), ('country', 53), ('loss_of_smell', 2)],\n",
+       " [(4, 2), (83, 42), (53, 27), (2, 1)])"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cat_sz, emb_szs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "id": "6e945c79-0a3b-41cd-bdda-4c0224b7c516",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.frame.DataFrame"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = partial_df[\"gender\"]\n",
+    "type(partial_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "f6d44435-dfe3-4071-828a-1d26ce968f8b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch.nn as nn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "ccf2f0ca-0030-4dfa-8a8b-8d05e9469a90",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Embedding(52, 5)"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nn.Embedding(num_embeddings=52, embedding_dim=5, padding_idx=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "0f328d9b-66d3-48ed-b7c9-a74ec6796a68",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 2746 entries, 0 to 2745\n",
+      "Data columns (total 37 columns):\n",
+      " #   Column                       Non-Null Count  Dtype  \n",
+      "---  ------                       --------------  -----  \n",
+      " 0   user_id                      2746 non-null   object \n",
+      " 1   age                          2746 non-null   int64  \n",
+      " 2   covid_health_status          2746 non-null   object \n",
+      " 3   record_date                  2746 non-null   object \n",
+      " 4   english_proficiency          2746 non-null   object \n",
+      " 5   gender                       2746 non-null   object \n",
+      " 6   country                      2746 non-null   object \n",
+      " 7   local_region                 2425 non-null   object \n",
+      " 8   state                        2746 non-null   object \n",
+      " 9   returning_user               2066 non-null   object \n",
+      " 10  smoker                       1086 non-null   object \n",
+      " 11  cold                         488 non-null    object \n",
+      " 12  hypertension                 233 non-null    object \n",
+      " 13  diabetes                     232 non-null    object \n",
+      " 14  cough                        652 non-null    object \n",
+      " 15  date_of_ct_scan              153 non-null    object \n",
+      " 16  has_taken_ct_scan            963 non-null    object \n",
+      " 17  ct_score                     153 non-null    float64\n",
+      " 18  diarrheoa                    52 non-null     object \n",
+      " 19  fever                        406 non-null    object \n",
+      " 20  loss_of_smell                169 non-null    object \n",
+      " 21  muscle_pain                  325 non-null    object \n",
+      " 22  type_of_covid_test           805 non-null    object \n",
+      " 23  covid_test_date              805 non-null    object \n",
+      " 24  covid_test_result            1333 non-null   object \n",
+      " 25  was_using_mask               1708 non-null   object \n",
+      " 26  vaccination_status           963 non-null    object \n",
+      " 27  breathing_difficulties       211 non-null    object \n",
+      " 28  other_respiratory_illness    72 non-null     object \n",
+      " 29  fatigue                      382 non-null    object \n",
+      " 30  sore_throat                  296 non-null    object \n",
+      " 31  ischemic_heart_disease       37 non-null     object \n",
+      " 32  asthma                       134 non-null    object \n",
+      " 33  other_preexisting_condition  100 non-null    object \n",
+      " 34  chronic_lung_disease         44 non-null     object \n",
+      " 35  pneumonia                    45 non-null     object \n",
+      " 36  covid_label                  2519 non-null   float64\n",
+      "dtypes: float64(2), int64(1), object(34)\n",
+      "memory usage: 793.9+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16648910-8b48-4df8-9523-9ea3a4209726",
    "metadata": {},
    "outputs": [],
    "source": []
