--- a/python/Jupyter_Notebooks/Tracker Visualizations.ipynb
+++ b/python/Jupyter_Notebooks/Tracker Visualizations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 554,
+   "execution_count": 1,
    "id": "25900946-2351-4d40-a84f-2a9ebf320579",
    "metadata": {},
    "outputs": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 555,
+   "execution_count": 2,
    "id": "4d955e93-e774-45a3-92fd-06395b1e4635",
    "metadata": {},
    "outputs": [
@@ -36,7 +36,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading Tracker from: D:/Archiv/Studium/Master/6.-Semester/Masters_Thesis/Git/acoustic_covid_detection/python/run/tracker_saves/2023-03-02_PredictionLevelMIL_mfcc_mfcc_mil_combined_cough_7bagStatistics_variedBagsize_variedNeurons_hlayers1.pickle\n",
+      "Loading Tracker from: D:/Archiv/Studium/Master/6.-Semester/Masters_Thesis/Git/acoustic_covid_detection/python/run/tracker_saves/2023-03-12_brogrammers_mfccs_3s_breathing_deep_test.pickle\n",
       "\n",
       "Parameters used for finding the best performing epoch:\n",
       "           metric_used:                   auc_roc\n",
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 556,
+   "execution_count": 3,
    "id": "5c6806ad-f200-435b-99fc-b504c286d8d0",
    "metadata": {},
    "outputs": [
@@ -62,12 +62,12 @@
      "text": [
       "\n",
       "Datasets used:\n",
-      "mfcc_mil_combined_cough\n",
-      "           dataset_class:                 <class 'datasets.MultipleInstanceLearningMFCC'>\n",
-      "           participants_file:             2023_02_23_mfcc_combined_coughs_3s.pickle\n",
-      "           augmented_files:               ['2023_02_23_mfcc_combined_coughs_3s_7xaugmented.pickle', '2023_02_26_mfcc_combined_coughs_3s_x2x2augmented.pickle']\n",
-      "           train_set_label_counts:        label '0': 4296  -  label '1': 2600\n",
-      "           types_of_recording:            combined_coughs\n",
+      "mfccs_3s_breathing_deep\n",
+      "           dataset_class:                 <class 'datasets.BrogrammersMFCCDataset'>\n",
+      "           participants_file:             2023_02_21_mfcc_breathing-deep_3s_22kHz.pickle\n",
+      "           augmented_files:               ['2023_02_21_mfcc_breathing-deep_3s_22kHz_augmented.pickle']\n",
+      "           train_set_label_counts:        label '0': 2182  -  label '1': 1640\n",
+      "           types_of_recording:            breathing-deep\n",
       "\n",
       "Audio Processing Parameters:\n",
       "           type_of_features:              mfcc\n",
@@ -85,40 +85,20 @@
       "           fft_res_hz:                    2.69\n",
       "\n",
       "Predetermined Time Domain Augmentations:\n",
-      "           AddGaussianNoise:              'probability': 0.8, 'min_amplitude': 0.0003, 'max_amplitude': 0.01\n",
-      "           PitchShift:                    'probability': 0.8, 'min_semitones': -2, 'max_semitones': 2\n",
-      "           TimeStretch:                   'probability': 0.8, 'min_rate': 0.95, 'max_rate': 1.05\n",
-      "           Gain:                          'probability': 0.8, 'min_gain_in_db': -18, 'max_gain_in_db': 12\n",
-      "           AddGaussianNoise:              'probability': 0.8, 'min_amplitude': 0.0003, 'max_amplitude': 0.01\n",
-      "           PitchShift:                    'probability': 0.8, 'min_semitones': -2, 'max_semitones': 2\n",
-      "           TimeStretch:                   'probability': 0.8, 'min_rate': 0.95, 'max_rate': 1.05\n",
-      "           Gain:                          'probability': 0.8, 'min_gain_in_db': -18, 'max_gain_in_db': 12\n",
+      "           AddGaussianNoise:              'probability': 0.8, 'min_amplitude': 0.0003, 'max_amplitude': 0.02\n",
+      "           PitchShift:                    'probability': 0.8, 'min_semitones': -3, 'max_semitones': 3\n",
+      "           TimeStretch:                   'probability': 0.8, 'min_rate': 0.85, 'max_rate': 1.15\n",
+      "           Gain:                          'probability': 0.8, 'min_gain_in_db': -40, 'max_gain_in_db': 16\n",
       "______________________________________________________________\n",
       "model:\n",
-      "PredLevelMIL(\n",
-      "  (conv_layers): Sequential(\n",
-      "    (0): Conv2d(1, 64, kernel_size=(3, 3), stride=(1, 1))\n",
-      "    (1): ReLU()\n",
-      "    (2): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
-      "    (3): Conv2d(64, 32, kernel_size=(2, 2), stride=(1, 1))\n",
-      "    (4): ReLU()\n",
-      "    (5): BatchNorm2d(32, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-      "    (6): Flatten(start_dim=1, end_dim=-1)\n",
-      "  )\n",
-      "  (linear_layers): Sequential(\n",
-      "    (0): Linear(in_features=20320, out_features=256, bias=True)\n",
-      "    (1): ReLU()\n",
-      "    (2): Dropout(p=0.5, inplace=False)\n",
-      "    (3): Linear(in_features=256, out_features=128, bias=True)\n",
-      "    (4): ReLU()\n",
-      "    (5): Dropout(p=0.3, inplace=False)\n",
-      "    (6): Linear(in_features=128, out_features=1, bias=True)\n",
-      "  )\n",
-      "  (mil_attention): Sequential(\n",
-      "    (0): Linear(in_features=7, out_features=64, bias=True)\n",
-      "    (1): ReLU()\n",
-      "    (2): Linear(in_features=64, out_features=1, bias=True)\n",
-      "  )\n",
+      "BrogrammersModel(\n",
+      "  (conv1): Conv2d(1, 64, kernel_size=(3, 3), stride=(1, 1))\n",
+      "  (maxpool): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+      "  (conv2): Conv2d(64, 32, kernel_size=(2, 2), stride=(1, 1))\n",
+      "  (batch_norm2d): BatchNorm2d(32, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "  (dense1): Linear(in_features=20320, out_features=256, bias=True)\n",
+      "  (dense2): Linear(in_features=256, out_features=128, bias=True)\n",
+      "  (dense3): Linear(in_features=128, out_features=1, bias=True)\n",
       ")\n",
       "______________________________________________________________\n",
       "optimizer:\n",
@@ -129,8 +109,8 @@
       "    capturable: False\n",
       "    eps: 1e-08\n",
       "    foreach: None\n",
-      "    initial_lr: 5e-05\n",
-      "    lr: 5e-05\n",
+      "    initial_lr: 0.0001\n",
+      "    lr: 0.0001\n",
       "    maximize: False\n",
       "    weight_decay: 0.0001\n",
       ")\n",
@@ -139,9 +119,9 @@
       "BCEWithLogitsLoss()\n",
       "\n",
       "Tracker contains:\n",
-      "           parameter runs:                9\n",
-      "           folds per run:                 1\n",
-      "           epochs:                        200\n"
+      "           parameter runs:                64\n",
+      "           folds per run:                 5\n",
+      "           epochs:                        250\n"
      ]
     }
    ],
@@ -151,14 +131,165 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 557,
+   "execution_count": 4,
+   "id": "8a88e565-f932-4e07-ab7c-f2f3d3079541",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>AddGaussianNoise</th>\n",
+       "      <th>PitchShift</th>\n",
+       "      <th>TimeStretch</th>\n",
+       "      <th>Gain</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>'probability': 0.8, 'min_amplitude': 0.0003, 'max_amplitude': 0.02</td>\n",
+       "      <td>'probability': 0.8, 'min_semitones': -3, 'max_semitones': 3</td>\n",
+       "      <td>'probability': 0.8, 'min_rate': 0.85, 'max_rate': 1.15</td>\n",
+       "      <td>'probability': 0.8, 'min_gain_in_db': -40, 'max_gain_in_db': 16</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                     AddGaussianNoise  \\\n",
+       "0  'probability': 0.8, 'min_amplitude': 0.0003, 'max_amplitude': 0.02   \n",
+       "\n",
+       "                                                    PitchShift  \\\n",
+       "0  'probability': 0.8, 'min_semitones': -3, 'max_semitones': 3   \n",
+       "\n",
+       "                                              TimeStretch  \\\n",
+       "0  'probability': 0.8, 'min_rate': 0.85, 'max_rate': 1.15   \n",
+       "\n",
+       "                                                              Gain  \n",
+       "0  'probability': 0.8, 'min_gain_in_db': -40, 'max_gain_in_db': 16  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame(tracker.augmentations)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "76ece74f-fd67-4c38-91df-feab0ff1a455",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mfccs_3s_breathing_deep\n",
+      "{'model': 'BrogrammersModel', 'optimizer': 'Adam ', 'loss_function': 'BCEWithLogitsLoss'}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>dataset_class</th>\n",
+       "      <th>participants_file</th>\n",
+       "      <th>augmented_files</th>\n",
+       "      <th>train_set_label_counts</th>\n",
+       "      <th>types_of_recording</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>&lt;class 'datasets.BrogrammersMFCCDataset'&gt;</td>\n",
+       "      <td>2023_02_21_mfcc_breathing-deep_3s_22kHz.pickle</td>\n",
+       "      <td>2023_02_21_mfcc_breathing-deep_3s_22kHz_augmented.pickle</td>\n",
+       "      <td>label '0': 2182  -  label '1': 1640</td>\n",
+       "      <td>breathing-deep</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                               dataset_class  \\\n",
+       "0  <class 'datasets.BrogrammersMFCCDataset'>   \n",
+       "\n",
+       "                                participants_file  \\\n",
+       "0  2023_02_21_mfcc_breathing-deep_3s_22kHz.pickle   \n",
+       "\n",
+       "                                            augmented_files  \\\n",
+       "0  2023_02_21_mfcc_breathing-deep_3s_22kHz_augmented.pickle   \n",
+       "\n",
+       "                train_set_label_counts types_of_recording  \n",
+       "0  label '0': 2182  -  label '1': 1640     breathing-deep  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "key = tracker.datasets.keys()\n",
+    "key=list(key)[0]\n",
+    "print(key)\n",
+    "print(tracker.model_and_training_parameters[\"compact\"])\n",
+    "pd.DataFrame(tracker.datasets[key])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "5277788f-7ece-4a1e-8160-555c08ad3693",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f1e86354337a4a6b850d378fc86bb9f5",
+       "model_id": "4a2bc261f2694a3abcb44187215533af",
        "version_major": 2,
        "version_minor": 0
       },
@@ -191,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 558,
+   "execution_count": 7,
    "id": "f05b3fcd-7bd6-41c7-9027-e462fe98e811",
    "metadata": {},
    "outputs": [
@@ -201,7 +332,7 @@
      "text": [
       "\n",
       "Parameters used for finding the best performing epoch:\n",
-      "           metric_used:                   auc_roc\n",
+      "           metric_used:                   loss\n",
       "           smoothing:                     10\n",
       "           ignore_first_n_epochs:         10\n"
      ]
@@ -209,7 +340,7 @@
    ],
    "source": [
     "n_samples = 10\n",
-    "tracker.compute_overall_metrics(smooth_n_samples=n_samples, ignore_first_n_epochs=n_samples, metric_used_for_performance_analysis=\"auc_roc\")"
+    "tracker.compute_overall_metrics(smooth_n_samples=n_samples, ignore_first_n_epochs=n_samples, metric_used_for_performance_analysis=\"loss\")"
    ]
   },
   {
@@ -228,14 +359,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 559,
+   "execution_count": 8,
    "id": "d542739c-2cb0-4fef-a26c-0e4926bed5f9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d9ced7e920ab4fa6abf07dc6f21d9a01",
+       "model_id": "c23254aaa5ce4ebfa5c0158c7bdde1d8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -276,14 +407,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 560,
+   "execution_count": 11,
    "id": "2f253649-2a96-486f-8eca-61058c080721",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b8dba4a60eaa467ba3075deb249180ef",
+       "model_id": "c2d9838b523a4df8a7055a8acb90e49c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -317,14 +448,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 561,
+   "execution_count": 231,
+   "id": "d1f46d23-85d4-48d0-8ae0-0c0681deee85",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'auc_roc': 0.8173166757197174,\n",
+       " 'loss': 0.4710118794983083,\n",
+       " 'accuracy': 0.7919191919191919,\n",
+       " 'f1_score': 0.5528612455076509,\n",
+       " 'auc_prec_recall': 0.6175650871416153,\n",
+       " 'precision': 0.5400400000000001,\n",
+       " 'tpr_at_95': 0.3901298701298701,\n",
+       " 'tpr': 0.6062236363636364,\n",
+       " 'tnr': 0.8413418181818182,\n",
+       " 'fpr': 0.1586581818181818,\n",
+       " 'fnr': 0.3937763636363636}"
+      ]
+     },
+     "execution_count": 231,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tracker.crossval_runs[0].runs[1].best_performances[\"eval\"]\n",
+    "# tracker.crossval_runs[0].runs.pop(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "3407a633-e593-4d24-86b0-afb12c88baf4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ae5f9ca888b14138aaf8afcbc5f64493",
+       "model_id": "e6879a948cd543bdb4352956e38b8d5c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -349,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 551,
+   "execution_count": 233,
    "id": "ab612294-eca8-489d-8743-794ae7278edf",
    "metadata": {
     "tags": []
@@ -367,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 512,
+   "execution_count": 138,
    "id": "a9948dab-cc00-4282-9254-04f0a52da1a2",
    "metadata": {
     "tags": []
@@ -376,12 +539,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6a15b6ac4d414ff4aab1e0c00e40ab08",
+       "model_id": "58cda14285214b75a7b9d271ce3eb0fd",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(Dropdown(description='run_id', options=(\"{'batch': '1', 'lr': '5e-05', 'wd': '0.0001', '…"
+       "interactive(children=(Dropdown(description='run_id', options=('{\\'batch\\': \\'32\\', \\'lr\\': \\'0.001\\', \\'wd\\': …"
       ]
      },
      "metadata": {},
@@ -408,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": null,
    "id": "fab5b5b8-c565-4899-8d90-fb9abc0249a8",
    "metadata": {},
    "outputs": [],
@@ -419,22 +582,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": null,
    "id": "dc0571c5-1275-4792-a36e-937d0c4cdf2b",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([-0.2291,  0.9149,  1.0514,  0.7606,  1.7378,  0.6437,  0.3877,  1.0420],\n",
-       "       requires_grad=True)"
-      ]
-     },
-     "execution_count": 353,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = torch.randn((8))\n",
     "a.requires_grad = True\n",
@@ -443,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 354,
+   "execution_count": null,
    "id": "44fd4ec0-bf0f-42e8-befb-58cbcf5c02de",
    "metadata": {},
    "outputs": [],
@@ -458,22 +609,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": null,
    "id": "d64754ec-b51d-4773-84ea-6e048b07016a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(tensor(-0.2176, grad_fn=<MeanBackward0>),\n",
-       " tensor(-1.5399, grad_fn=<SubBackward0>))"
-      ]
-     },
-     "execution_count": 224,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "array=a\n",
     "mean = torch.mean(array)\n",
@@ -488,44 +627,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": null,
    "id": "2926e2f3-b1a8-4fa8-bea5-c4e3459d34cb",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(tensor(1.0522, grad_fn=<PowBackward0>),\n",
-       " tensor(1.0522, grad_fn=<PowBackward0>))"
-      ]
-     },
-     "execution_count": 225,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "std1, std"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": null,
    "id": "eab04444-fc92-432f-930c-86413019dfde",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(tensor(-0.2176, grad_fn=<MeanBackward0>),\n",
-       " tensor(-1.5399, grad_fn=<SubBackward0>))"
-      ]
-     },
-     "execution_count": 226,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "z_scores=(a-mean)/std1\n",
     "torch.mean(torch.pow(z_scores, 3)), torch.mean(torch.pow(z_scores, 4))-3 "
@@ -533,21 +648,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": null,
    "id": "6723767f-b80b-4ab2-bcf3-9d3b5e271b4b",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(-0.21760963799475835, -1.539940012571929)"
-      ]
-     },
-     "execution_count": 227,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "scipy.stats.skew(a.detach().numpy()), scipy.stats.kurtosis(a.detach().numpy())"
    ]
